ChestLocker ok
toute les fonctionnalitees voulues du ChestLocker fonctionnent.
On verra pour l'ajout de son, de particules...
mise a jour du readme complete